--- a/django/Dockerfile
+++ b/django/Dockerfile
@@ -4,10 +4,12 @@ WORKDIR /app
 
 ENV PYTHONUNBUFFERED 1
 
-COPY . /app
+COPY requirements.txt requirements.txt
 
 RUN pip install --upgrade pip && \
     pip install -r requirements.txt
+
+COPY . /app
 
 EXPOSE 8000
 
